PP-12 Recipe database API: fix collection tags, add endpoint to set recipes in collections